# PoCS

./: 100hz.cpp  25hz.cpp  5hz.cpp  CMakeLists.txt  DiscreteStateSpace.h  Generator.h  Integrator.h  Matrix.h  StateSpace.h  continuos.cpp  main.cpp
include/: mainwindow.h  ui_mainwindow.h
qt_discret/: CMakeLists.txt
src/: main.cpp  mainwindow.cpp
